@@ -363,6 +363,8 @@ select-icon=Select icon
 page-settings-icon-hint=And select icon
 page-settings-create-header=Create new page
 page-settings-edit-header=Edit page icon and name
+header-settings-create-header=Create new header
+header-settings-edit-header=Edit icon and name
 create=Create
 ok=OK
 cancel=Cancel
@@ -749,6 +751,7 @@ production-table-header-ingredients=Ingredients
 production-table-header-products=Products
 production-table-header-modules=Modules
 production-table-add-raw-recipe=Add raw recipe
+production-table-add-table-header=Add nested table header
 production-table-add-technology=Add technology
 production-table-export-to-blueprint=Export inputs and outputs to blueprint with constant combinators:
 production-table-export-entities-to-blueprint=Export entities to blueprint
