@@ -120,10 +120,17 @@ public class ProductionTableView : ProjectPageView<ProductionTable> {
     private class RecipeColumn(ProductionTableView view) : ProductionTableDataColumn(view, LSs.ProductionTableHeaderRecipe, 13f, 13f, 30f, widthStorage: nameof(Preferences.recipeColumnWidth)) {
         public override void BuildElement(ImGui gui, RecipeRow recipe) {
             gui.spacing = 0.5f;
-            switch (gui.BuildFactorioObjectButton(recipe.recipe, ButtonDisplayStyle.ProductionTableUnscaled)) {
-                case Click.Left when recipe.recipe != null:
+            IFactorioObjectWrapper? display = (IFactorioObjectWrapper?)recipe.recipe ?? recipe.icon;
+            ObjectTooltipOptions tooltip = new() { Hide = recipe.recipe == null };
+
+            switch (gui.BuildFactorioObjectButton(display, ButtonDisplayStyle.ProductionTableUnscaled, tooltip)) {
+                case Click.Left:
                     gui.ShowDropDown(delegate (ImGui imgui) {
                         DrawRecipeTagSelect(imgui, recipe);
+
+                        if (recipe.recipe == null && imgui.BuildButton(LSs.EditPageProperties) && imgui.CloseDropdown()) {
+                            HeaderRowSettingsPanel.Show(recipe);
+                        }
 
                         if (recipe.subgroup == null && imgui.BuildButton(LSs.ProductionTableCreateNested) && imgui.CloseDropdown()) {
                             recipe.RecordUndo().subgroup = new ProductionTable(recipe);
@@ -134,7 +141,7 @@ public class ProductionTableView : ProjectPageView<ProductionTable> {
                         }
 
                         if (recipe.subgroup != null) {
-                            BuildRecipeButton(imgui, recipe.subgroup);
+                            BuildRecipeButtons(imgui, recipe.subgroup);
                         }
 
                         if (recipe.subgroup != null && imgui.BuildButton(LSs.ProductionTableUnpackNested).WithTooltip(imgui, recipe.subgroup.expanded ? LSs.ProductionTableShortcutRightClick : LSs.ProductionTableShortcutExpandAndRightClick) && imgui.CloseDropdown()) {
@@ -145,7 +152,7 @@ public class ProductionTableView : ProjectPageView<ProductionTable> {
                             view.BuildShoppingList(recipe);
                         }
 
-                        if (imgui.BuildCheckBox(LSs.ProductionTableShowTotalIo, recipe.showTotalIO, out bool newShowTotalIO)) {
+                        if (recipe.recipe != null && imgui.BuildCheckBox(LSs.ProductionTableShowTotalIo, recipe.showTotalIO, out bool newShowTotalIO)) {
                             recipe.RecordUndo().showTotalIO = newShowTotalIO;
                         }
 
@@ -153,7 +160,9 @@ public class ProductionTableView : ProjectPageView<ProductionTable> {
                             recipe.RecordUndo().enabled = newEnabled;
                         }
 
-                        BuildFavorites(imgui, recipe.recipe.target, LSs.AddRecipeToFavorites);
+                        if (recipe.recipe != null) {
+                            BuildFavorites(imgui, recipe.recipe.target, LSs.AddRecipeToFavorites);
+                        }
 
                         if (recipe.subgroup != null && imgui.BuildRedButton(LSs.ProductionTableDeleteNested).WithTooltip(imgui, recipe.subgroup.expanded ? LSs.ProductionTableShortcutCollapseAndRightClick : LSs.ProductionTableShortcutRightClick) && imgui.CloseDropdown()) {
                             _ = recipe.owner.RecordUndo().recipes.Remove(recipe);
@@ -182,7 +191,7 @@ public class ProductionTableView : ProjectPageView<ProductionTable> {
                 gui.textColor = recipe.hierarchyEnabled ? SchemeColor.BackgroundText : SchemeColor.BackgroundTextFaint;
             }
 
-            gui.BuildText(recipe.recipe?.target.locName, TextBlockDisplayStyle.WrappedText);
+            gui.BuildText(recipe.recipe?.target.locName ?? recipe.description, recipe.recipe != null || recipe.isOverviewMode ? TextBlockDisplayStyle.WrappedText : TextBlockDisplayStyle.Default());
 
             void unpackNestedTable() {
                 var evacuate = recipe.subgroup.recipes;
@@ -209,7 +218,7 @@ public class ProductionTableView : ProjectPageView<ProductionTable> {
         }
 
         public override void BuildMenu(ImGui gui) {
-            BuildRecipeButton(gui, view.model);
+            BuildRecipeButtons(gui, view.model);
 
             gui.BuildText(LSs.ProductionTableExportToBlueprint, TextBlockDisplayStyle.WrappedText);
             using (gui.EnterRow()) {
@@ -263,10 +272,10 @@ goodsHaveNoProduction:;
         }
 
         /// <summary>
-        /// Build the "Add raw recipe" button and handle its clicks.
+        /// Build the "Add raw recipe" and "Add table header" buttons and handle their clicks.
         /// </summary>
         /// <param name="table">The table that will receive the new recipes or technologies, if any are selected</param>
-        private static void BuildRecipeButton(ImGui gui, ProductionTable table) {
+        private static void BuildRecipeButtons(ImGui gui, ProductionTable table) {
             if (gui.BuildButton(LSs.ProductionTableAddRawRecipe).WithTooltip(gui, LSs.ProductionTableAddTechnologyHint) && gui.CloseDropdown()) {
                 if (InputSystem.Instance.control) {
                     SelectMultiObjectPanel.Select(Database.technologies.all, new(LSs.ProductionTableAddTechnology, Multiple: true,
@@ -278,6 +287,17 @@ goodsHaveNoProduction:;
                         Checkmark: table.Contains, YellowMark: table.ContainsAnywhere, SelectedQuality: Quality.Normal),
                         r => table.AddRecipe(r, DefaultVariantOrdering));
                 }
+            }
+
+            if (gui.BuildButton(LSs.ProductionTableAddTableHeader) && gui.CloseDropdown()) {
+                HeaderRowSettingsPanel.Show(null, (description, icon) => {
+                    RecipeRow newRow = new(table, null) {
+                        description = description,
+                        icon = icon,
+                    };
+                    newRow.subgroup = new(newRow);
+                    table.RecordUndo().recipes.Add(newRow);
+                });
             }
         }
 
